--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "studio": "npx prisma studio"
   },
   "keywords": [],
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@prisma/client": "^3.13.0",
+    "babel-plugin-superjson-next": "^0.4.3",
     "next": "12.0.10",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -19,6 +22,7 @@
   "devDependencies": {
     "@types/node": "17.0.14",
     "@types/react": "17.0.38",
+    "prisma": "^3.13.0",
     "typescript": "4.5.5"
   }
 }
