--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@next-auth/prisma-adapter": "1.0.3",
     "@prisma/client": "^3.13.0",
     "babel-plugin-superjson-next": "^0.4.3",
     "next": "12.0.10",
+    "next-auth": "4.3.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-markdown": "8.0.0"
